# libomemo-c

./: .gitignore  CMakeLists.txt
CMakeModules/: FindProtobuf_C.cmake  protobuf_c_bundled.cmake
src/: CMakeLists.txt  libomemo-c.pc.in  omemo-c-config.cmake.in  session_state.c  signal_protocol.c  signal_protocol_types.h
tests/: CMakeLists.txt
